<?xml version="1.0"?>
<package format="2">
    <name>dobot_bringup</name>
    <version>1.0.0</version>
    <description>The cr_bringup package</description>
    <maintainer email="zhangran@dobot.cc">zhangran</maintainer>

    <license>MIT</license>


    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
