<?xml version="1.0"?>
<package format="2">
    <name>rviz_dobot_control</name>
    <version>1.0.0</version>
    <description>The rviz_dobot_control package</description>
    <maintainer email="zhangran@dobot.cc">zhangran</maintainer>

    <license>MIT</license>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rviz</build_depend>
    <build_depend>dobot_bringup</build_depend>
    <build_depend>dobot_v4_bringup</build_depend>
    
    <exec_depend>rviz</exec_depend>
    <exec_depend>roscpp</exec_depend>

    <build_export_depend>rviz</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
